--- a/configure.ac
+++ b/configure.ac
@@ -1,12 +1,9 @@
-AC_PREREQ([2.70])
+AC_PREREQ([2.71])
 
-AC_INIT([pmodel], [1.0.0], [nisal.bandara@outlook.com])
+AC_INIT([pmodel],[1.0.0],[nisal.bandara@outlook.com])
 
-# Initialize Automake
-AM_INIT_AUTOMAKE([foreign])
-
-# Use explicit source directory
-AC_CONFIG_SRCDIR(src)
+# Set config header
+AC_CONFIG_HEADERS([config.h])
 
 # Look for C compiler
 AC_PROG_CC
