--- a/configure.ac
+++ b/configure.ac
@@ -1,11 +1,13 @@
-AC_PREREQ([2.71])
+AC_INIT([PModel],
+        [1.0.0],
+        [nisal.bandara@outlook.com],
+        [pmodel],
+        [https://github.com/nisalb/pmodel])
 
-AC_INIT([pmodel],[1.0.0],[nisal.bandara@outlook.com])
+AM_INIT_AUTOMAKE([gnu])
 
-# Set config header
 AC_CONFIG_HEADERS([config.h])
 
-# Look for C compiler
 AC_PROG_CC
 
 AC_CONFIG_FILES([Makefile])
